--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,6 +5,22 @@
   <div id="carousel-thumb" class="carousel slide carousel-fade carousel-thumbnails" data-ride="carousel">
     <!--Slides-->
     <div class="carousel-inner" role="listbox">
+        <% if (locals.front) { %>
+          <% i = 0; %>
+          <% for (var index = 0; index < 5; index++) { %>
+              <% if (locals.front[index].null != true) { %>
+                <div class="carousel-item <% if(index == 0) { %>active<% } %>">
+                    <img class="d-block w-100" src="http://localhost:8089/api/front/image/<%= locals.front[index]._id %>" alt="<%= i %>slide">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>First slide label</h5>
+                      <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+                    </div>
+                  </div>
+                  <% i = i + 1; %>
+              <%  } %>
+          <% } %>
+        <% } %>
+      <!--
       <div class="carousel-item active">
         <img class="d-block w-100" src="https://cdn.eventfinda.co.nz/uploads/events/transformed/1180171-527593-34.jpg?v=2" alt="First slide">
         <div class="carousel-caption d-none d-md-block">
@@ -40,7 +56,9 @@
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </div>
       </div>
+      -->
     </div>
+    
     <!--/.Slides-->
     <!--Controls-->
     <a class="carousel-control-prev" href="#carousel-thumb" role="button" data-slide="prev">
@@ -56,6 +74,18 @@
 
   <div class="thumbnail-wrapper">
     <ol class="carousel-indicators">
+        <% if (locals.front) { %>
+          <% i = 0; %>
+          <% for (var index = 0; index < 5; index++) { %>
+              <% if (locals.front[index].null != true) { %>
+                <li data-target="#carousel-thumb" data-slide-to="<%= i %>" <% if(index == 0) { %>class='active'<% } %>> 
+                    <img class="d-block w-100" src="http://localhost:8089/api/front/image/<%= locals.front[index]._id %>" alt="..." class="img-fluid">
+                </li>
+                <% i = i + 1; %>
+              <%  } %>
+          <% } %>
+        <% } %>
+        <!--
       <li data-target="#carousel-thumb" data-slide-to="0" class="active"> 
         <img class="d-block w-100" src="https://cdn.eventfinda.co.nz/uploads/events/transformed/1180171-527593-34.jpg?v=2" alt="..." class="img-fluid">
       </li>
@@ -70,7 +100,7 @@
       </li>
       <li data-target="#carousel-thumb" data-slide-to="4"> 
         <img class="d-block w-100" src="https://images.pexels.com/photos/462118/pexels-photo-462118.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="..." class="img-fluid">
-      </li>
+      </li>-->
     </ol>
   </div>
 
