--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,14 +12,20 @@
                 <div class="carousel-item <% if(index == 0) { %>active<% } %>">
                     <img class="d-block w-100" src="http://localhost:8089/api/front/image/<%= locals.front[index]._id %>" alt="<%= i %>slide">
                     <div class="carousel-caption d-none d-md-block">
-                      <h5>First slide label</h5>
-                      <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+                      <% if (locals.front[index].title) { %>
+                        <h5>First slide label</h5>
+                      <% } %>
+                      <% if (locals.front[index].content) { %>
+                        <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+                      <% } %>
                     </div>
                   </div>
                   <% i = i + 1; %>
-              <%  } %>
+              <% } %>
           <% } %>
         <% } %>
+    </div>
+
       <!--
       <div class="carousel-item active">
         <img class="d-block w-100" src="https://cdn.eventfinda.co.nz/uploads/events/transformed/1180171-527593-34.jpg?v=2" alt="First slide">
@@ -57,7 +63,6 @@
         </div>
       </div>
       -->
-    </div>
     
     <!--/.Slides-->
     <!--Controls-->
@@ -109,8 +114,6 @@
 
 <script>
 $('#carousel-thumb').on('slide.bs.carousel', function (element) {
-  console.log($("body > div.container > div > div.thumbnail-wrapper > ol > li.active"))
-  console.log($(`body > div.container > div > div.thumbnail-wrapper > ol > li:nth-child(${element.to + 1})`))
   $("body > div.container > div > div.thumbnail-wrapper > ol > li.active").removeClass("active");
   $(`body > div.container > div > div.thumbnail-wrapper > ol > li:nth-child(${element.to + 1})`).addClass("active");
 })
