finished functionalities for front posting, ajaxified calls to api

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,12 +12,12 @@
                 <div class="carousel-item <% if(index == 0) { %>active<% } %>">
                     <img class="d-block w-100" src="http://localhost:8089/api/front/image/<%= locals.front[index]._id %>" alt="<%= i %>slide">
                     <div class="carousel-caption d-none d-md-block">
-                      <% if (locals.front[index].title) { %>
+                        <!--<% if (locals.front[index].title) { %>
                         <h5>First slide label</h5>
                       <% } %>
                       <% if (locals.front[index].content) { %>
                         <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-                      <% } %>
+                      <% } %>-->
                     </div>
                   </div>
                   <% i = i + 1; %>
