--- a/views/single/Galerie-single.ejs
+++ b/views/single/Galerie-single.ejs
@@ -6,7 +6,7 @@
   <div id="single-gallery">
     <% if (locals.galleries){ %>
       <div class="card" style="width: 18rem;" id="<%= locals.galleries._id %>">
-        <a href="#expand"><img onclick="expand(this);" src="/api/gallery/image/<%= locals.galleries._id %>" class="card-img-top" alt="<%= locals.galleries.title %>"></a>
+        <a href="#expand"><img onclick="expand(this);" src="/api/image/<%= locals.img[0]._id %>" class="card-img-top" alt="<%= locals.galleries.title %>"></a>
         <div class="card-body">
           <h5 class="card-title"><i><%= locals.galleries.title %></i></h5>
           <% if (locals.level && locals.level > 1) { %>
@@ -20,6 +20,13 @@
           </p>
         </div>
       </div>
+      <% if (locals.img) { %>
+        <% locals.img.forEach(function (item) { %>
+          <% if (item.isMain !== true) { %>
+            <img src="http://localhost:8089/api/image/<%= item._id %>">
+          <% } %>
+        <% }) %>
+      <% } %>
     <% } %>
   </div>
 </div>
