--- a/views/single/Galerie-single.ejs
+++ b/views/single/Galerie-single.ejs
@@ -23,7 +23,7 @@
       <% if (locals.img) { %>
         <% locals.img.forEach(function (item) { %>
           <% if (item.isMain !== true) { %>
-            <img src="http://localhost:8089/api/image/<%= item._id %>">
+            <a href="#expand"><img onclick="expand(this);" src="http://localhost:8089/api/image/<%= item._id %>"></a>
           <% } %>
         <% }) %>
       <% } %>
@@ -32,10 +32,16 @@
 </div>
 <script src="/scripts/frontValidation.js"></script>
 <script src="/scripts/formFocus.js"></script>
-
+<script>
+    function expand(image){
+      let expand = $("#expandImg");
+      expand.src = image.src;
+      expand.attr("src", image.src);
+    }
+</script>
 <a class="lightbox-close" href="#close">
   <div class="lightbox-target" id="expand">
-    <img id="expandImg" src="/api/gallery/image/<%= locals.galleries._id %>"/>
+    <img id="expandImg" src="/api/image/<%= locals.img[0]._id %>"/>
   </div>
 </a>
   
