--- a/views/Shop.ejs
+++ b/views/Shop.ejs
@@ -12,7 +12,7 @@
                 <% Object.keys(locals.original).forEach(function (index) { %>
                   <% if (locals.original[index].isUnique) { %>
                   <div class="card" id="<%= locals.original[index]._id %>">
-                    <a href="#expand"><img onclick="expand(this);" src="/api/shop/image/<%= locals.original[index]._id %>" class="card-img-top" alt="<%= locals.original[index].title %>"></a>
+                    <a href="#expand"><img onclick="expand(this);" src="/api/image/<%= locals.original[index].mainImgId %>" class="card-img-top" alt="<%= locals.original[index].title %>"></a>
                     <div class="card-body">
                       <h5 class="card-title"><i><a href="Shop/<%= locals.original[index]._id %>"><%= locals.original[index].title %></a></i></h5>
                       <p class="card-text gallery-description"><%= locals.original[index].content %></p>
@@ -34,7 +34,7 @@
                 <% Object.keys(locals.print).forEach(function (index) { %>
                   <% if (!locals.print[index].isUnique) { %>
                   <div class="card" id="<%= locals.print[index]._id %>">
-                    <a href="#expand"><img onclick="expand(this);" src="/api/shop/image/<%= locals.print[index]._id %>" class="card-img-top" alt="<%= locals.print[index].title %>"></a>
+                    <a href="#expand"><img onclick="expand(this);" src="/api/image/<%= locals.print[index].mainImgId %>" class="card-img-top" alt="<%= locals.print[index].title %>"></a>
                     <div class="card-body">
                       <h5 class="card-title"><i><a href="Shop/<%= locals.print[index]._id %>"><%= locals.print[index].title %></a></i></h5>
                       <p class="card-text gallery-description"><%= locals.print[index].content %></p>
@@ -78,6 +78,6 @@
 
 <a class="lightbox-close" href="#close">
   <div class="lightbox-target" id="expand">
-    <img id="expandImg" src="/api/shop/image/<%= locals.original[0]._id %>"/>
+    <img id="expandImg" src="/api/image/<%= locals.print[0].mainImgId %>"/>
   </div>
 </a>
