--- a/views/restricted/Shop-patch.ejs
+++ b/views/restricted/Shop-patch.ejs
@@ -14,8 +14,16 @@
             <span id="i_content" class="form-info">Content must contain between 1 and 2048 characters</span>
 
             <div class="form-group">
-                <img src="/api/shop/image/<%= locals.shop._id %>"/>
-                <input type="file" name="img" id="img">
+                <input type="file" name="img" id="img" multiple required>
+                <% if (locals.img) { %>
+                    <% locals.img.forEach(function (item) { %>
+                        <img id="<%= item._id %>" src="http://localhost:8089/api/image/<%= item._id %>">
+                        <div id="actDiv<%= item._id %>" class="action-div" <% if (item.isMain === true) { %>style="display:none"<% } %>>
+                            <a id="del<%= item._id %>" onclick="deleteImage(event, this);" href="http://localhost:8089/api/image/delete/<%= item._id %>"><i class="fas fa-trash-alt"></i></a>
+                            <a id="sel<%= item._id %>" onclick="setMain(event, this);" href="http://localhost:8089/api/image/select/Shop/<%= locals.shop._id %>/<%= item._id %>"><i class="fas fa-star"></i></a>
+                        </div>
+                    <% }) %>
+                <% } %>
             </div>
             
             <div class="form-group">
@@ -36,6 +44,62 @@
 </div>
 
 <script>
+    function setMain(e, item) {
+        e.preventDefault();
+        fetch(item.href, {
+            method: 'get',
+            mode: 'same-origin'
+        })
+        .then(response => response.json())
+        .then(data => {
+        let type = "success"
+        if (data.err === true) 
+            type = "warning";
+        else {
+            let divs = $(`.action-div`);
+            console.log(divs)
+            for (let i = 0; i < divs.length; i++) {
+                divs[i].setAttribute("style", "display: block");
+            }
+            $(`#actDiv${item.id.substr(3)}`).attr("style", "display: none");
+        }
+        var alertErr = `
+            <div id="alert" class="alert alert-${type}" role="alert">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span></button>
+                ${data.msg}
+            </div>`;
+        addAlert(alertErr, "#header")
+       })
+    }
+
+    function deleteImage(e, item) {
+        e.preventDefault();
+        fetch(item.href, {
+            method: 'get',
+            mode: 'same-origin'
+        })
+        .then(response => response.json())
+        .then(data => {
+        if (data.err === true) {
+            var alertErr = `
+            <div id="alert" class="alert alert-warning" role="alert">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span></button>
+                ${data.msg}
+            </div>`;
+            addAlert(alertErr, "#header")
+        } else {
+            $(`#${item.id.substr(3)}`).remove();
+            $(`#sel${item.id.substr(3)}`).remove();
+            item.remove();
+            var alertSuccess = `
+            <div id="alert" class="alert alert-success" role="alert">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span></button>
+                ${data.msg}
+            </div>`;
+            addAlert(alertSuccess, "#header")      
+        }})
+    }
+
     async function patchShop(e) {
         e.preventDefault();
         let title = $("#title").val(),
@@ -45,7 +109,10 @@
             img = document.querySelector('#img'),
             formData = new FormData();
             
-        formData.append('img', img.files[0]);
+       
+        for (i = 0; i < img.files.length; i++) 
+            formData.append('img', img.files[i]);
+
         formData.append('title', title);
         formData.append('content', content);
         formData.append('price', price);
