--- a/views/restricted/Shop-post.ejs
+++ b/views/restricted/Shop-post.ejs
@@ -15,7 +15,7 @@
             <span id="i_content" class="form-info">Content must contain between 1 and 2048 characters</span>  
         
             <div class="form-group">
-                <input type="file" name="img" id="img" required>
+                <input type="file" name="img" id="img" multiple required>
             </div>
             
             <div class="form-group">
@@ -41,7 +41,9 @@
                 img = document.querySelector('#img'),
                 formData = new FormData();
             
-            formData.append('img', img.files[0]);
+            for (i = 0; i < img.files.length; i++) 
+                formData.append('img', img.files[i]);
+
             formData.append('title', title);
             formData.append('content', content);
             formData.append('price', price);
